bug: Fixed 1px gap between marquees

--- a/src/Components/TechStack/TechStack.module.scss
+++ b/src/Components/TechStack/TechStack.module.scss
@@ -9,6 +9,7 @@
   padding-left: 0;
   border-top: 3px solid #363636;
   padding-top: 0.8em;
+  margin-left: -1px;
   .tech-stack-item {
     display: inline-block;
     list-style: none;
